@@ -117,8 +117,10 @@ uint8_t Pipe_Write_Stream_LE(const void* Data, uint16_t Length
 			if ((ErrorCode = Pipe_WaitUntilReady()))
 			  return ErrorCode;
 		}
-
-		Pipe_Write_Byte(*(DataStream++));
+		else
+		{
+			Pipe_Write_Byte(*(DataStream++));
+		}
 	}
 
 	return PIPE_RWSTREAM_ERROR_NoError;
@@ -150,8 +152,10 @@ uint8_t Pipe_Write_Stream_BE(const void* Data, uint16_t Length
 			if ((ErrorCode = Pipe_WaitUntilReady()))
 			  return ErrorCode;
 		}
-
-		Pipe_Write_Byte(*(DataStream--));
+		else
+		{
+			Pipe_Write_Byte(*(DataStream--));
+		}
 	}
 
 	return PIPE_RWSTREAM_ERROR_NoError;
@@ -182,8 +186,10 @@ uint8_t Pipe_Discard_Stream(uint16_t Length
 			if ((ErrorCode = Pipe_WaitUntilReady()))
 			  return ErrorCode;
 		}
-
-		Pipe_Discard_Byte();
+		else
+		{
+			Pipe_Discard_Byte();
+		}
 	}
 
 	return PIPE_RWSTREAM_ERROR_NoError;
@@ -215,8 +221,10 @@ uint8_t Pipe_Read_Stream_LE(void* Buffer, uint16_t Length
 			if ((ErrorCode = Pipe_WaitUntilReady()))
 			  return ErrorCode;
 		}
-
-		*(DataStream++) = Pipe_Read_Byte();
+		else
+		{
+			*(DataStream++) = Pipe_Read_Byte();
+		}
 	}
 
 	return PIPE_RWSTREAM_ERROR_NoError;
@@ -248,8 +256,10 @@ uint8_t Pipe_Read_Stream_BE(void* Buffer, uint16_t Length
 			if ((ErrorCode = Pipe_WaitUntilReady()))
 			  return ErrorCode;
 		}
-
-		*(DataStream--) = Pipe_Read_Byte();
+		else
+		{
+			*(DataStream--) = Pipe_Read_Byte();
+		}
 	}
 	
 	return PIPE_RWSTREAM_ERROR_NoError;
